Laid framework for sorting files. Fixed minor visual bug on mobile

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 #main{
     margin:15px;
     background-color:white;
+    width:auto;
     padding-bottom: 260px;
 }
 
@@ -171,9 +172,9 @@ li a:hover {
     display:none;
 }
 #table{
-    width: 100%;
+    width: auto;
     border-collapse: collapse;
-    margin: 15px;
+    margin: 0px;
 
 }
 #common {
